--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -74,14 +74,33 @@ hr.light{
     width: 75%;
 }
 
-@media (max-width: 998px){
+@media (min-width: 992px){
     .social a{
         font-size: 4em;
         padding: 2rem;
     }
+    .wrapper{
+      width: 30%;
+     
+    }
+    .modal-open .modal{
+      overflow-y: hidden;
+      width:30%;
+      margin-top: 55px;
+      margin-left: 30%;
+    }
+   
+    .login-modal{
+     
+      height: 90%;
+      
+    }
+    .wrapper header{
+      font-size: 35px;
+    }
 }
 
-@media (max-width: 768px){
+@media (min-width: 768px){
     .display-4{
         font-size: 200%;
     }
@@ -89,4 +108,193 @@ hr.light{
         font-size: 2.5em;
         padding: 1.2rem;
     }
+    .modal-open .modal{
+      overflow-y: hidden;
+      width:42%;
+      margin-top: 55px;
+      margin-left: 33%;
+    }
+    .login-modal{
+      padding: auto;
+      height:fit-content;
+      margin-top: 35px;
+      margin-left: 23%;
+    }
+    .button-login{
+    font-size: 95%;
+    padding: 8px 14px;
+    } 
+    .wrapper{
+      width: 60%;
+    }
+    .wrapper header {
+      font-size: 30px;
+  }
+}
+@media (max-width: 576px){
+  .display-4{
+    font-size: 160%;
+  }
+  .social a{
+    font-size: 2em;
+    padding: .7rem;
+  }
+  .button-login{
+    font-size: 70%;
+    padding: 4px 8px;
+  } 
+  .carousel-indicators{
+    display: none;
+  }
+  .modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding-top: 9px;
+    height: 87%;
+    margin-top: 47px;
+}
+  .wrapper{
+    width: 80%;
+  }
+  .login-modal{
+    height:85%;
+    margin-top: 21%;
+    margin-left: 10%;
+    width: 80%;
+  }
+  .wrapper header {
+    font-size: 30px;
+}
+}
+/*modal login*/
+
+.wrapper{
+  padding: 40px 30px 50px 30px;
+  background: #fff;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
+}
+.wrapper header{
+  font-weight: 600;
+}
+.wrapper form{
+  margin: 40px 0;
+}
+form .field{
+  width: 100%;
+  margin-bottom: 20px;
+}
+form .field.shake{
+  animation: shake 0.3s ease-in-out;
+}
+@keyframes shake {
+  0%, 100%{
+    margin-left: 0px;
+  }
+  20%, 80%{
+    margin-left: -12px;
+  }
+  40%, 60%{
+    margin-left: 12px;
+  }
+}
+form .field .input-area{
+  height: 50px;
+  width: 100%;
+  position: relative;
+}
+form input{
+  width: 100%;
+  height: 100%;
+  outline: none;
+  padding: 0 45px;
+  font-size: 18px;
+  background: none;
+  caret-color: #5372F0;
+  border-radius: 5px;
+  border: 1px solid #bfbfbf;
+  border-bottom-width: 2px;
+  transition: all 0.2s ease;
+}
+form .field input:focus,
+form .field.valid input{
+  border-color: #5372F0;
+}
+form .field.shake input,
+form .field.error input{
+  border-color: #dc3545;
+}
+.field .input-area i{
+  position: absolute;
+  top: 50%;
+  font-size: 18px;
+  pointer-events: none;
+  transform: translateY(-50%);
+}
+.input-area .icon{
+  left: 15px;
+  color: #bfbfbf;
+  transition: color 0.2s ease;
+}
+.input-area .error-icon{
+  right: 15px;
+  color: #dc3545;
+}
+form input:focus ~ .icon,
+form .field.valid .icon{
+  color: #5372F0;
+}
+form .field.shake input:focus ~ .icon,
+form .field.error input:focus ~ .icon{
+  color: #bfbfbf;
+}
+form input::placeholder{
+  color: #bfbfbf;
+  font-size: 17px;
+}
+form .field .error-txt{
+  color: #dc3545;
+  text-align: left;
+  margin-top: 5px;
+}
+form .field .error{
+  display: none;
+}
+form .field.shake .error,
+form .field.error .error{
+  display: block;
+}
+form .pass-txt{
+  text-align: left;
+  margin-top: -10px;
+}
+.wrapper a{
+  color: #5372F0;
+  text-decoration: none;
+}
+.wrapper a:hover{
+  text-decoration: underline;
+}
+form input[type="submit"]{
+  height: 50px;
+  margin-top: 30px;
+  color: #fff;
+  padding: 0;
+  border: none;
+  background: #5372F0;
+  cursor: pointer;
+  border-bottom: 2px solid rgba(0,0,0,0.1);
+  transition: all 0.3s ease;
+}
+form input[type="submit"]:hover{
+  background: #2c52ed;
+}
+
+/* radio button */
+.radio-cus{
+  margin-left: 12%;
+}
+.radio-sp{
+  margin-left: 12%;
 }
