--- a/stylesheets/registration-style.css
+++ b/stylesheets/registration-style.css
@@ -5,18 +5,33 @@
   box-sizing: border-box;
   font-family: 'Poppins',sans-serif;
 }
+
+.logo-img{
+  height: 10vh;
+}
+
+.navbar{
+  padding: .8rem;
+}
+
+.navbar-nav li{
+padding-right: 20px ;
+}
+.nav-link{
+  font-size: 1.4em !important;
+}
 body{
   height: 128vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(135deg, #aeb2b3, #7b747e);
 }
 .container{
   max-width: 700px;
   width: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
@@ -34,7 +49,7 @@ body{
   height: 3px;
   width: 30px;
   border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(135deg, #d4e3ec, #232324);
 }
 .content form .user-details{
   display: flex;
@@ -67,19 +82,20 @@ form .input-box span.details{
   border-color: #9b59b6;
 }
  form .gender-details .gender-title{
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: 500;
  }
  form .category{
-   display: flex;
+   display: inline-flex;
    width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
+   margin: 14px 17px ;
+   padding-top: 1px;
  }
  form .category label{
    display: flex;
    align-items: center;
    cursor: pointer;
+   padding-left: 10px;
  }
  form .category label .dot{
   height: 18px;
@@ -114,11 +130,11 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #b2c7d4, #403b42);
  }
  form .button input:hover{
   /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(-135deg, #c9d9e4, #343035);
   }
  @media(max-width: 584px){
  .container{
