--- a/stylesheets/admin-tables.css
+++ b/stylesheets/admin-tables.css
@@ -33,7 +33,7 @@ padding-right: 20px ;
       padding: 25px 30px;
       display: flex;
       margin-bottom: 25px;
-      justify-content: center;
+      /* justify-content: center; */
     }
     .table-header {
       background-color: #95A5A6;
@@ -46,19 +46,40 @@ padding-right: 20px ;
       box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
     }
     .col-1 {
-      flex-basis: 10%;
-      margin-left: 2vh;
+      flex-basis: 7%;
+      margin-left: -2%;
     }
     .col-2 {
-      flex-basis: 30%;
+      flex-basis: 20%;
     }
     .col-3 {
         flex-basis: 13%;
     }
     .col-4 {
-        flex-basis: 30%;
-        margin-left: 65px;
-        margin-right: 20px;
+        flex-basis: 20%;
+        /* margin-left: 65px;
+        margin-right: 20px; */
+    }
+
+    /* .col-5{
+      flex-basis:10%;
+    }
+    .col-6{
+      flex-basis:30%;
+    }
+    .col-7{
+      flex-basis:10%;
+    }
+    .col-8{
+      flex-basis:10%;
+    }
+    */
+    .btn{
+      border: none;
+    }
+    .btn:hover {
+  
+      transform: scale(1.4);
     }
     
     @media all and (max-width: 767px) {
@@ -87,6 +108,6 @@ padding-right: 20px ;
           flex-basis: 50%;
           text-align: right;
         }
-      
+
     }
   
