--- a/stylesheets/sp-myworks.css
+++ b/stylesheets/sp-myworks.css
@@ -1,6 +1,6 @@
 .req-table {
-    max-width: 650px;
-    width: 650px;
+    max-width: 950px;
+    width: 950px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 10px;
@@ -16,3 +16,6 @@
     flex-basis: 10%;
   }
   
+  tbody .amt{
+      width: 80px;
+  }
