--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,16 +6,80 @@
     padding: .8rem;
 }
 
+.bg-image img
+{
+  width: 100%;
+}
+
+.bg-image .bg-image-caption
+{
+    position: absolute;
+    width: 283px;
+    height: 50px;
+    bottom: 350px;
+    left: 380px;
+    color: #000000;
+    
+    text-align:center;
+    font-weight:bold;
+    opacity:0.7;
+  
+}
+
+ /* .circle
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #e51e2a;
+    clip-path: circle(70% at right -20%);
+} */
+
+ .my-nav
+{
+  position: absolute;
+  width: 100%;
+  z-index: 9999;
+  margin: 0 auto;
+  background: none;
+  border: 0;
+  border-radius: 0;
+} 
+
+.carousel-caption
+{
+  top: 70%;
+  left: 40%;
+}
+/* .carousel-head{
+  left:20%
+} */
+/* .my-carousel
+{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+} */
 .navbar-nav li{
 padding-right: 20px ;
+
+
+/* background-color: white;
+border-radius: 40px;
+border-color: #f44336; */
 }
+
 .nav-link{
     font-size: 1.4em !important;
 }
 
 .carousel-inner img{
     width: 100px;
-    height: 600px;
+    height: 500px;
+    opacity: 50%;
 }
 
 .padding{
@@ -25,7 +89,7 @@ padding-right: 20px ;
 .welcome{
     width: 75%;
     margin:0 auto; 
-    padding-top: 5rem;
+    padding-top: 2rem;
 }
 
 .welcome hr {
@@ -72,6 +136,20 @@ footer{
 hr.light{
     border-top: 1px solid #d5d5d5;
     width: 75%;
+}
+.submit-btn {
+	color: #fff;
+  align-items: center;
+	background-color: #f23e3e;
+	font-weight: 400;
+	height: 50px;
+	font-size: 14px;
+	border: none;
+	width: 100%;
+	border-radius: 40px;
+	text-transform: uppercase;
+	-webkit-transition: 0.2s all;
+	transition: 0.2s all;
 }
 
 @media (min-width: 992px){
