Quantity booking added

--- a/stylesheets/cust-dashboard.css
+++ b/stylesheets/cust-dashboard.css
@@ -99,7 +99,7 @@ padding-right: 20px ;
 
 #booking {
 
-	background-image: url('../images/dash.jpg');
+	/* background-image: url('../images/dash.jpg'); */
 	background-size: cover;
 	background-position: center;
 	
