--- a/stylesheets/cust-payment.css
+++ b/stylesheets/cust-payment.css
@@ -54,11 +54,13 @@ padding-right: 20px ;
   .proceed-btn,
   .year select {
     height : 42px;
+    opacity : 50;
   }
   
   .card-number,
   .month select,
   .year select {
+    opacity : 50;
     font-size   : 14px;
     font-weight : 100;
     line-height : 14px;
@@ -71,7 +73,7 @@ padding-right: 20px ;
   .year select {
     font-style: italic;
     color   : #86939e;
-    opacity : .7;
+    opacity : 50;
   }
   
   /* Card Number */
@@ -82,6 +84,7 @@ padding-right: 20px ;
     padding-left  : 20px;
     border        : 2px solid #e1e8ee;
     border-radius : 6px;
+    opacity : 50;
   }
   
   /* Date Field */
