--- a/stylesheets/registration-style.css
+++ b/stylesheets/registration-style.css
@@ -26,7 +26,7 @@ body{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: linear-gradient(135deg, #000000, #381e1e);
+  background: linear-gradient(135deg, #838383, #ffffff);
 }
 .container{
   max-width: 700px;
@@ -141,7 +141,7 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #000000, #fa4242);
+   background: linear-gradient(135deg, #838383, #5c5c5c);
  }
  
  select.decorated option:hover {
@@ -153,7 +153,7 @@ form .input-box span.details{
  }
  form .button input:hover{
   /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #000000, #fd4949);
+  background: linear-gradient(-135deg, #838383, #303030);
   }
  @media(max-width: 584px){
  .container{
