--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -128,7 +128,7 @@ border-color: #f44336; */
 }
 
 footer{
-    background-color: #3f3f3f;
+    background-color: #000000;
     color: #d5d5d5;
     padding-top: 2rem;
 }
