--- a/stylesheets/admin-tables.css
+++ b/stylesheets/admin-tables.css
@@ -60,6 +60,10 @@ padding-right: 20px ;
         /* margin-left: 65px;
         margin-right: 20px; */
     }
+    .col-new {
+      
+      max-width: 10.2%;
+    }
     .submit-btn2 {
       color: #fff;
       background-color: #f23e3e;
@@ -100,6 +104,17 @@ padding-right: 20px ;
       text-transform: uppercase;
       -webkit-transition: 0.2s all;
       transition: 0.2s all;
+    }
+    #myInput {
+      background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+      background-position: 10px 12px; /* Position the search icon */
+      background-repeat: no-repeat; /* Do not repeat the icon image */
+      width: 50%; /* Full-width */
+      font-size: 16px; /* Increase font-size */
+      padding: 12px 20px 12px 40px; /* Add some padding */
+      border: 1px solid #ddd; /* Add a grey border */
+      margin-bottom: 12px; /* Add some space below the input */
+      margin-left: 250px;
     }
 
    /*   .col-5{
